[project]
name = "cellraft"
version = "0.1.0"
description = ""
authors = [
    {name = "Ziyad Rahman",email = "zrahman3004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "tifffile (>=2025.6.11,<2026.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
